[package]
name = "pingo"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
